# agentic-rl

./: .gitignore  README.md  pyproject.toml  run_agl_training.py  run_art_full.py  run_art_training.py  run_baseline_eval.py  run_post_eval.py  run_toucan_32b.py  run_toucan_eval.py  run_toucan_langfuse_to_art.py  run_toucan_langgraph.py  run_toucan_langgraph_langfuse.py  run_toucan_training.py
configs/: agl.yaml  art.yaml  base.yaml
configs/hardware/: 2xgpu.yaml  8xh100.yaml
docs/: art_architecture.md  our_training_loop.md  toucan_training.md
results/agl/: training_results.json
results/art/: training_results.json
results/art/post_eval/: metrics.json
results/art_full/: training_results.json
results/art_full/post_eval/: metrics.json
results/baseline/: metrics.json  mini_metrics.json
results/comparison/: comparison.json  report.md
results/toucan/: memory_profile.json  model_size_profiles.json  training_results.json
results/toucan_langfuse_to_art/: training_results.json
results/toucan_langgraph/: training_results.json
results/toucan_langgraph_langfuse/: training_results.json
scripts/: install.sh  run_agl.sh  run_art.sh  run_baseline.sh  run_comparison.sh
src/agent/: prompts.py  react_agent.py  tau_adapter.py  tool_formatter.py
src/agl_training/: config.py  lit_agent.py  train.py
src/art_training/: config.py  rollout.py  train.py
src/comparison/: compare.py  report.py
src/eval/: baseline.py  evaluate.py  metrics.py  reward.py
src/toucan/: dataset.py  reward.py
tests/: test_agent.py  test_reward.py  test_tau_adapter.py
(+2 files in other folders)
